[DEV-6662] fixing link to data dictionary & alignment of resources header
-- data dictionary link:
menuOptions dataMapping is not just used for global nav.
Was excluding the data-dictionary from the sideNav
menu of the download page.

this change restores data-dictionary to the sideNav and
fixes the 404 error that was appearing

-- resources header alignment: using right: 0
instead of left: 0

--- a/src/_scss/layouts/default/header/nav/_dropdownMenu.scss
+++ b/src/_scss/layouts/default/header/nav/_dropdownMenu.scss
@@ -48,11 +48,16 @@
         ul.nav-children__list {
             @include unstyled-list;
             position: absolute;
-            left: 0;
             width: rem(230);
             background-color: $color-white;
             box-shadow: 0 4px 5px 0 rgba(0,0,0,0.5);
             border-top: 1px solid $dropdown-border;
+            &:not(.resources) {
+                left: 0;
+            }
+            &.resources {
+                right: 0;
+            }
         }
 
         hr.nav-children__list-separator {
